--- a/chamber/Final_Project/css/normalize.css
+++ b/chamber/Final_Project/css/normalize.css
@@ -1,4 +1,4 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 
 
 /* Document
@@ -7,12 +7,15 @@
 
 /**
  * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
+ * 2. Prevent adjustments of font size after orientation changes in
+ *    IE on Windows Phone and in iOS.
  */
 
 html {
     line-height: 1.15;
     /* 1 */
+    -ms-text-size-adjust: 100%;
+    /* 2 */
     -webkit-text-size-adjust: 100%;
     /* 2 */
 }
@@ -23,7 +26,7 @@ html {
 
 
 /**
-   * Remove the margin in all browsers.
+   * Remove the margin in all browsers (opinionated).
    */
 
 body {
@@ -32,10 +35,15 @@ body {
 
 
 /**
-   * Render the `main` element consistently in IE.
+   * Add the correct display in IE 9-.
    */
 
-main {
+article,
+aside,
+footer,
+header,
+nav,
+section {
     display: block;
 }
 
@@ -53,6 +61,28 @@ h1 {
 
 /* Grouping content
      ========================================================================== */
+
+
+/**
+   * Add the correct display in IE 9-.
+   * 1. Add the correct display in IE.
+   */
+
+figcaption,
+figure,
+main {
+    /* 1 */
+    display: block;
+}
+
+
+/**
+   * Add the correct margin in IE 8.
+   */
+
+figure {
+    margin: 1em 40px;
+}
 
 
 /**
@@ -88,16 +118,20 @@ pre {
 
 
 /**
-   * Remove the gray background on active links in IE 10.
+   * 1. Remove the gray background on active links in IE 10.
+   * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
    */
 
 a {
     background-color: transparent;
+    /* 1 */
+    -webkit-text-decoration-skip: objects;
+    /* 2 */
 }
 
 
 /**
-   * 1. Remove the bottom border in Chrome 57-
+   * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
    * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
    */
 
@@ -108,6 +142,16 @@ abbr[title] {
     /* 2 */
     text-decoration: underline dotted;
     /* 2 */
+}
+
+
+/**
+   * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
+   */
+
+b,
+strong {
+    font-weight: inherit;
 }
 
 
@@ -133,6 +177,25 @@ samp {
     /* 1 */
     font-size: 1em;
     /* 2 */
+}
+
+
+/**
+   * Add the correct font style in Android 4.3-.
+   */
+
+dfn {
+    font-style: italic;
+}
+
+
+/**
+   * Add the correct background and color in IE 9-.
+   */
+
+mark {
+    background-color: #ff0;
+    color: #000;
 }
 
 
@@ -172,11 +235,40 @@ sup {
 
 
 /**
-   * Remove the border on images inside links in IE 10.
+   * Add the correct display in IE 9-.
+   */
+
+audio,
+video {
+    display: inline-block;
+}
+
+
+/**
+   * Add the correct display in iOS 4-7.
+   */
+
+audio:not([controls]) {
+    display: none;
+    height: 0;
+}
+
+
+/**
+   * Remove the border on images inside links in IE 10-.
    */
 
 img {
     border-style: none;
+}
+
+
+/**
+   * Hide the overflow in IE.
+   */
+
+svg:not(:root) {
+    overflow: hidden;
 }
 
 
@@ -185,7 +277,7 @@ img {
 
 
 /**
-   * 1. Change the font styles in all browsers.
+   * 1. Change the font styles in all browsers (opinionated).
    * 2. Remove the margin in Firefox and Safari.
    */
 
@@ -194,7 +286,7 @@ input,
 optgroup,
 select,
 textarea {
-    font-family: inherit;
+    font-family: sans-serif;
     /* 1 */
     font-size: 100%;
     /* 1 */
@@ -214,6 +306,8 @@ button,
 input {
     /* 1 */
     overflow: visible;
+    width: 80%;
+    margin: auto;
 }
 
 
@@ -230,14 +324,20 @@ select {
 
 
 /**
-   * Correct the inability to style clickable types in iOS and Safari.
+   * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+   *    controls in Android 4.
+   * 2. Correct the inability to style clickable types in iOS and Safari.
    */
 
 button,
-[type="button"],
+html [type="button"],
+
+/* 1 */
+
 [type="reset"],
 [type="submit"] {
     -webkit-appearance: button;
+    /* 2 */
 }
 
 
@@ -299,16 +399,20 @@ legend {
 
 
 /**
-   * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+   * 1. Add the correct display in IE 9-.
+   * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
    */
 
 progress {
+    display: inline-block;
+    /* 1 */
     vertical-align: baseline;
+    /* 2 */
 }
 
 
 /**
-   * Remove the default vertical scrollbar in IE 10+.
+   * Remove the default vertical scrollbar in IE.
    */
 
 textarea {
@@ -317,8 +421,8 @@ textarea {
 
 
 /**
-   * 1. Add the correct box sizing in IE 10.
-   * 2. Remove the padding in IE 10.
+   * 1. Add the correct box sizing in IE 10-.
+   * 2. Remove the padding in IE 10-.
    */
 
 [type="checkbox"],
@@ -354,9 +458,10 @@ textarea {
 
 
 /**
-   * Remove the inner padding in Chrome and Safari on macOS.
+   * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
    */
 
+[type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
     -webkit-appearance: none;
 }
@@ -380,10 +485,15 @@ textarea {
 
 
 /*
-   * Add the correct display in Edge, IE 10+, and Firefox.
+   * Add the correct display in IE 9-.
+   * 1. Add the correct display in Edge, IE, and Firefox.
    */
 
-details {
+details,
+
+/* 1 */
+
+menu {
     display: block;
 }
 
@@ -397,12 +507,21 @@ summary {
 }
 
 
-/* Misc
+/* Scripting
      ========================================================================== */
 
 
 /**
-   * Add the correct display in IE 10+.
+   * Add the correct display in IE 9-.
+   */
+
+canvas {
+    display: inline-block;
+}
+
+
+/**
+   * Add the correct display in IE.
    */
 
 template {
@@ -410,8 +529,12 @@ template {
 }
 
 
+/* Hidden
+     ========================================================================== */
+
+
 /**
-   * Add the correct display in IE 10.
+   * Add the correct display in IE 10-.
    */
 
 [hidden] {
