--- a/Final_Project/css/large.css
+++ b/Final_Project/css/large.css
@@ -1,373 +1,17 @@
 @media only screen and (min-width: 64em) {
      :root {
-        --Primary_color: #153158;
-        --Secondary_color: #85C6E2;
-        --Accent1: #FFFFFF;
-        --Accent2: #C2C2C2;
+        --Primary_Color: #512A3D;
+        --Secondary_Color: #FE9A9C;
+        --Accent1: #EDE9E8;
+        --Accent2: #D9BFD0;
     }
     * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
     }
-    html {
-        background-color: var(--Accent1);
-    }
-    img {
-        max-width: 100%;
-        float: left;
-    }
-    .logo-img,
-    .footer-img {
-        width: 75px;
-        max-width: 100%;
-        border-radius: 50%;
-    }
-    .logo h1,
-    footer h1 {
-        font-size: 15px;
-    }
-    .logo p {
-        font-size: 10px;
-    }
-    .logo ul li {
-        display: block;
-        margin-top: -3em;
-    }
-    h1,
-    h2,
-    p {
-        font-family: Sansita, Ubuntu, and sans-serif;
-        text-align: center;
-    }
-    div h2 {
-        margin-bottom: 1em;
-    }
-    body {
-        width: 100%;
-        height: auto;
-        margin: auto;
-        /* padding: 1em; */
-    }
-    header,
-    footer {
-        width: auto;
-        display: grid;
-        background-color: var(--Primary_color);
-        color: var(--Accent1);
-        text-align: center;
-        height: auto;
-        padding: 0.90em;
-    }
-    header {
-        grid-template-columns: 10% 20% 60% 10%;
-        grid-template-rows: 60% 40%;
-    }
-    header ul {
-        display: inline;
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    }
-    header ul li {
-        float: left;
-    }
-    header nav {
-        text-decoration: none;
-    }
-    header ul li a {
-        display: block;
-    }
-    ul {
-        display: grid;
-    }
-    ul li {
-        list-style-type: none;
-    }
-    #currentdate {
-        color: var(--Accent1);
-        padding: 0.25em;
-    }
-    nav a {
-        color: var(--Accent1);
-        padding: 1em;
-    }
-    nav button {
-        display: none;
-    }
-    nav ul li {
-        display: block;
-    }
-    .icons ul li {
-        float: right;
-        padding: 0;
-        margin: 0;
-    }
-    .icons a {
-        width: 100%;
-        padding: 0;
-        margin: 0;
-    }
-    .divdate {
-        grid-row: 2;
-        grid-column: 1/5;
-        width: 100%;
-        margin-top: 1em;
-        padding-bottom: 2em;
-        padding-top: 0.25em;
-        border-radius: 5px;
-        background-color: rgba(0, 0, 0, 0.5);
-    }
-    .date {
-        padding: 0;
-        margin: 0;
-    }
-    .grid {
-        display: grid;
-        grid-template-columns: repeat( 4, 25%);
-        grid-template-rows: repeat( 3, auto);
-        margin-left: -1em;
-        margin-right: 1em;
-    }
-    div p {
-        background-color: transparent;
-        padding: 1em;
-    }
-    .event {
-        grid-column: 1/2;
-        grid-row: 1/2;
-        height: auto;
-        padding: 1em;
-    }
-    .weather {
-        grid-column: 1/2;
-        grid-row: 2/3;
-        padding: 1em;
-    }
-    .weather label {
-        width: 90%;
-        margin: auto;
-        margin-left: 2.5em;
-    }
-    #weather {
-        font-size: 1.3rem;
-        text-align: center;
-        padding: 1px;
-        margin-top: 8px;
-        text-shadow: none;
-    }
-    .weatherGroup {
-        display: flex;
-    }
-    #wind {
-        flex-direction: column;
-        text-align: left;
-        padding-left: 10px;
-    }
-    .join {
-        grid-column: 1/2;
-        grid-row: 3/4;
-        padding-top: 1em;
-        padding-bottom: 2em;
-    }
-    input {
-        text-align: center;
-    }
-    button a {
-        color: var(--Primary_color);
-        text-align: center;
-        text-decoration: none;
-    }
-    .hero {
-        grid-column: 2/4;
-        grid-row: 1/3;
-        padding: 0;
-    }
-    .hero-text {
-        position: absolute;
-        margin-top: 1em;
-        margin-left: 2em;
-    }
-    #rexburg-pic {
-        margin: 0 0 0 0;
-        width: 100%;
-        height: 100%;
-    }
-    .news {
-        grid-column: 2/4;
-        grid-row: 3/4;
-        padding: 1em;
-    }
-    .spotlight div {
-        display: grid;
-        grid-template-columns: 1fr;
-        margin: 1em;
-        border: 1px solid var(--Primary_color);
-        box-shadow: 5px var(--Primary_color);
-        /* height: 300px; */
-    }
-    #spotlight {
-        display: grid;
-    }
-    #header-img {
-        grid-column: 1;
-    }
-    .company {
-        grid-column: 2;
-        grid-row: 1;
-    }
-    .company h1 {
-        width: 100%;
-    }
-    .nav {
-        grid-column: 3;
-    }
-    .icons {
-        grid-column: 3/4;
-        float: right;
-    }
-    .icons li img {
-        width: 30px;
-        height: auto;
-    }
-    #spot1 {
-        grid-column: 1/3;
-        margin-bottom: 0;
-        border-bottom: transparent;
-    }
-    #spotlight {
-        grid-column: 4;
-        grid-row: 1/4;
-    }
-    #spotlight div {
-        box-shadow: 0px 0px 30px 0px var(--Primary_color);
-    }
-    #spotlight img {
-        width: 26%;
-        float: left;
-    }
-    #spot2 {
-        grid-column: 1/3;
-        margin-top: 0;
-        margin-bottom: 0;
-        border-bottom: transparent;
-    }
-    #spot3 {
-        display: grid;
-        grid-row: 3/4;
-        margin-top: 0;
-    }
-    footer {
-        font-size: .9rem;
-        display: grid;
-        grid-template-columns: 10% 10% 30% 15% 10%;
-        grid-template-rows: 70% 30%;
-        padding: 0;
-    }
-    .footer-img {
-        margin-left: -18em;
-        grid-column: 1;
-        grid-row: 1;
-    }
-    footer .logo-img {
-        width: 55%;
-    }
-    .footer-company {
-        margin: 1em;
-    }
-    .contact {
-        padding: 1em;
-        grid-column: 4;
-        grid-row: 1;
-    }
-    .js {
-        grid-column: 1/7;
-        grid-row: 2;
-        margin-top: 1em;
-    }
-    footer a {
-        color: white;
-        text-decoration: none;
-    }
-    #map {
-        width: 30px;
-        margin-left: 0em;
-    }
-    #currentdate {
-        grid-column: 1/4;
-        grid-row: 2;
-        width: 100%;
-    }
-    .large-div {
-        display: block;
-    }
-    #medium-div {
-        display: none;
-    }
-    .discover img[data-src] {
-        filter: blur(0.2em);
-    }
-    .discover img {
-        filter: blur(0em);
-        transition: filter 0.5s;
-    }
-    .discover-body {
-        display: grid;
-        margin: 0 auto;
-        justify-items: center;
-    }
-    picture {
-        width: 300px;
-        margin: 1em;
-    }
-    #discovery-header {
-        width: 100%;
-    }
-    .logo-address {
-        display: grid;
-        grid-template-columns: 30% 70%;
-        grid-column: 3;
-        grid-row: 1;
-    }
-    .discover-body h1 {
-        margin: 1em;
-    }
-    #date {
-        color: white;
-    }
-    hr {
-        height: 1px;
-        background-color: var(--Primary_color);
-        border: none;
-    }
-    div.medium-div {
-        display: none;
-    }
-    .weather-form {
-        background: white;
-    }
-    #weatherImg {
-        width: 50%;
-    }
-    .weather-div {
-        background-color: var(--Secondary_color);
-        margin: auto;
-        width: 100%;
-        text-align: center;
-        display: block;
-        font-size: 1rem;
-        margin-bottom: 1em;
-        height: auto;
-        box-shadow: 0px 0px 30px 0px var(--Primary_color);
-    }
-    #event-large {
-        display: block;
-    }
-    #weather-large {
-        display: block;
-    }
-    .divdate p {
-        margin: 0;
-        padding: 0;
-    }
+}
+
+#hamburgerBtn {
+    display: none;
 }
