--- a/Final_Project/css/medium.css
+++ b/Final_Project/css/medium.css
@@ -4,155 +4,14 @@
         -ms-text-size-adjust: 100%;
     }
      :root {
-        --Primary_color: #153158;
-        --Secondary_color: #85C6E2;
-        --Accent1: #FFFFFF;
-        --Accent2: #C2C2C2;
+        --Primary_Color: #512A3D;
+        --Secondary_Color: #FE9A9C;
+        --Accent1: #EDE9E8;
+        --Accent2: #D9BFD0;
     }
     * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-    }
-    html {
-        background-color: var(--Accent1);
-    }
-    .logo-img,
-    footer .logo-img {
-        width: 55px;
-        border-radius: 50%;
-    }
-    .logo h1,
-    footer h1 {
-        font-size: 15px;
-    }
-    .logo p {
-        font-size: 10px;
-    }
-    .logo ul li {
-        display: block;
-        margin-top: -3em;
-    }
-    h1,
-    h2,
-    p {
-        font-family: Sansita, Ubuntu, and sans-serif;
-        text-align: center;
-    }
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    html {
-        background-color: var(--Accent1);
-    }
-    h1,
-    h2,
-    p {
-        font-family: Sansita, Ubuntu, and sans-serif;
-        text-align: center;
-    }
-    .grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        align-items: center;
-    }
-    #hamburgerBtn {
-        background-color: #FFFFFF;
-        color: black;
-    }
-    nav button {
-        display: block;
-        float: right;
-        width: 35px;
-    }
-    .icons li a img {
-        display: block;
-    }
-    nav .icons li {
-        display: block;
-    }
-    .join {
-        grid-column: 1/3;
-        grid-row: 4/5;
-        /* height: 100px; */
-    }
-    .hero {
-        grid-column: 1/3;
-        grid-row: 1/2;
-        /* height: 200px; */
-    }
-    .hero img {
-        width: 100%;
-        display: block;
-        border-radius: 5px;
-    }
-    .hero hr {
-        background: transparent;
-        z-index: 1;
-    }
-    .news {
-        grid-column: 1/3;
-        grid-row: 2/3;
-        /* height: 100px; */
-    }
-    .spotlight {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-column: 1/3;
-        grid-row: 3/4;
-    }
-    .spotlight div {
-        padding: 1em;
-        /* height: 300px; */
-    }
-    #spot1 {
-        grid-column: 1;
-    }
-    #spot2 {
-        grid-column: 2;
-    }
-    #spotlight img {
-        width: 10%;
-        float: left;
-    }
-    #train {
-        margin-top: -3em;
-    }
-    #medium-div {
-        display: flex;
-        width: 190%;
-    }
-    hr {
-        height: 1px;
-        background-color: var(--Primary_color);
-        border: none;
-    }
-    #spotlight {
-        display: flex;
-    }
-    footer {
-        width: auto;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 60% 25%;
-        padding: 1em;
-        background-color: var(--Primary_color);
-        color: var(--Accent1);
-        text-align: center;
-        height: auto;
-    }
-    img {
-        max-width: 100%;
-        float: left;
-    }
-    #map {
-        width: 40px;
-        margin-left: 20em;
-        margin-right: -22em;
-    }
-    .discover-body img:hover {
-        box-shadow: 0px 0px 30px 0px black;
     }
 }
