--- a/Final_Project/css/small.css
+++ b/Final_Project/css/small.css
@@ -7,7 +7,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Source+Sans+Pro&display=swap');
 
-/*Applies to All*/
+/*Default*/
 
 h1 {
     font-family: 'Playfair Display SC', serif;
@@ -40,6 +40,8 @@ p {
 #logo {
     background-color: var(--Primary_Color);
     display: block;
+    position: relative;
+    text-align: center;
 }
 
 #logo img {
@@ -48,18 +50,19 @@ p {
     margin-right: auto;
     padding-bottom: 1em;
     padding-top: 1em;
-    position: relative;
+    width: 20%;
 }
 
 #logo h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 14px;
     text-shadow: 0 0 5px var(--Accent2);
-    top: 15%;
-    left: 43.75%;
 }
 
 
