--- a/Final_Project/css/small.css
+++ b/Final_Project/css/small.css
@@ -187,12 +187,13 @@ main div {
     width: 500px;
     height: 400px;
     overflow: hidden;
+    margin: auto;
     position: relative;
 }
 
 #temples img {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 #reservebtn {
