--- a/Final_Project/css/medium.css
+++ b/Final_Project/css/medium.css
@@ -41,4 +41,14 @@
         font-size: 25px;
         text-shadow: 0 0 5px var(--Accent2);
     }
+    /* main */
+    #reservation {
+        overflow: hidden;
+    }
+    #reservation img {
+        width: 60%;
+        height: auto;
+        margin: auto;
+        position: relative;
+    }
 }
