--- a/Final_Project/css/medium.css
+++ b/Final_Project/css/medium.css
@@ -28,6 +28,7 @@
         margin-right: auto;
         padding-bottom: 1em;
         padding-top: 1em;
+        margin: 40%;
         width: 20%;
     }
     .logo h1 {
@@ -42,13 +43,36 @@
         text-shadow: 0 0 5px var(--Accent2);
     }
     /* main */
-    #reservation {
-        overflow: hidden;
-        position: relative;
-    }
-    #reservation img {
-        width: 100%;
-        height: auto;
+    .grid {
+        display: grid;
+        height: 100%;
+        grid-template-columns: 60% 40%;
+        grid-template-rows: 1fr 1fr 1fr;
+        margin-left: -1em;
+        margin-right: 1em;
+        grid-gap: 1em;
         margin: auto;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        background-color: transparent;
     }
+    #temples {
+        grid-column: 2;
+        grid-row: 1;
+    }
+    #reservation {
+        grid-column: 1;
+        grid-row: 1/2;
+    }
+    #activities {
+        grid-column: 2;
+        grid-row: 2;
+        float: right;
+    }
+    #weather-grid {
+        grid-column: 1/3;
+        grid-row: 3;
+    }
+    /*Footer*/
 }
