--- a/Final_Project/css/small.css
+++ b/Final_Project/css/small.css
@@ -99,6 +99,8 @@ nav ul li a:active {
 }
 
 #hamburgerBtn span:nth-child(1) {
+    color: var(--Secondary_Color);
+    background-color: var(--Primary_Color);
     display: block;
     grid-column: 1;
     grid-row: 1;
@@ -182,8 +184,8 @@ main div {
 /*Elements*/
 
 #temples {
-    width: 500px;
-    height: 400px;
+    width: 100%;
+    height: auto;
     overflow: hidden;
     margin: auto;
     position: relative;
@@ -195,15 +197,15 @@ main div {
     grid-row: 2;
     background-color: transparent;
     position: relative;
-    width: 500px;
-    height: 400px;
+    width: auto;
     margin: auto;
 }
 
 #reservation img {
     width: 100%;
-    height: 100%;
+    height: auto;
     position: relative;
+    overflow: hidden;
 }
 
 #reservation a {
@@ -220,9 +222,16 @@ main div {
     padding-bottom: 0px;
 }
 
+#weather-grid {
+    width: 100%;
+    height: auto;
+    margin: auto;
+}
+
 #activities {
-    width: 500px;
-    height: 400px;
+    width: 100%;
+    height: auto;
+    ;
     overflow: hidden;
     margin: auto;
     position: relative;
@@ -244,8 +253,16 @@ main div {
     color: var(--Accent1);
 }
 
+#weather-box {
+    background-color: var(--Accent1);
+}
+
 
 /*Footer*/
+
+footer {
+    width: 100%;
+}
 
 footer,
 footer h1,
@@ -269,6 +286,11 @@ footer ul li a {
     font-size: 20px;
     display: inline;
     padding: 1em;
+}
+
+iframe {
+    width: 90%;
+    height: auto;
 }
 
 #contact ul li {
