--- a/Final_Project/css/small.css
+++ b/Final_Project/css/small.css
@@ -31,8 +31,46 @@ p {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+body {
+    width: 100%;
+    height: auto;
+    margin: auto;
+}
+
 
 /*Header*/
+
+header {
+    height: auto;
+}
+
+.logo {
+    background-color: var(--Primary_Color);
+    display: block;
+    position: relative;
+    text-align: center;
+}
+
+.logo img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 1em;
+    padding-top: 1em;
+    width: 20%;
+}
+
+.logo h1 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 40px;
+    text-shadow: 0 0 5px var(--Accent2);
+}
 
 
 /*---Logo---*/
