--- a/Final_Project/css/medium.css
+++ b/Final_Project/css/medium.css
@@ -29,15 +29,15 @@
         padding-bottom: 1em;
         padding-top: 1em;
         margin: 40%;
-        width: 20%;
+        width: 50%;
     }
     .logo h1 {
         display: block;
         margin-left: auto;
         margin-right: auto;
         position: absolute;
-        top: 50%;
-        left: 50%;
+        top: 35%;
+        left: 65%;
         transform: translate(-50%, -50%);
         font-size: 25px;
         text-shadow: 0 0 5px var(--Accent2);
@@ -46,7 +46,7 @@
     .grid {
         display: grid;
         height: 100%;
-        grid-template-columns: 60% 40%;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         margin-left: -1em;
         margin-right: 1em;
@@ -58,15 +58,15 @@
         background-color: transparent;
     }
     #temples {
-        grid-column: 2;
+        grid-column: 3;
         grid-row: 1;
     }
     #reservation {
-        grid-column: 1;
+        grid-column: 1/2;
         grid-row: 1/2;
     }
     #activities {
-        grid-column: 2;
+        grid-column: 3;
         grid-row: 2;
         float: right;
     }
@@ -75,4 +75,9 @@
         grid-row: 3;
     }
     /*Footer*/
+    footer {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
