--- a/Final_Project/css/large.css
+++ b/Final_Project/css/large.css
@@ -15,6 +15,13 @@
     #hamburgerBtn {
         display: none;
     }
+    nav ul li a {
+        text-decoration: none;
+        color: var(--Primary_Color);
+        font-family: 'Playfair Display SC', serif;
+        font-size: 20px;
+        display: inline;
+    }
     .logo {
         background-color: var(--Primary_Color);
         display: block;
@@ -37,7 +44,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: 40px;
+        font-size: 30px;
         text-shadow: 0 0 5px var(--Accent2);
     }
     /*Main*/
@@ -61,6 +68,9 @@
         text-align: center;
         background-color: transparent;
     }
+    .activity-grid {
+        grid-template-columns: 1fr;
+    }
     #temples {
         grid-template-columns: 1fr;
         grid-column: 1;
@@ -68,15 +78,49 @@
     }
     #reservation {
         grid-column: 2/4;
-        grid-row: 1/2;
+        object-fit: cover;
+        grid-row-start: 1;
+        grid-row-end: 4;
+        max-height: 100%;
+        height: 100%;
+    }
+    #reservation img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    button #reservation {
+        height: 2em;
+        font-size: 2em;
+        margin: auto;
+        width: auto;
+        border-radius: 50%;
     }
     #activities {
         grid-column: 4;
         grid-row: 1/4;
     }
+    .temple-grid section:not(:first-of-type) {
+        display: block;
+    }
+    .activity-grid section:not(:first-of-type) {
+        display: block;
+    }
     #weather-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-column: 1/4;
         grid-row: 3;
+    }
+    div #weather-box1 {
+        grid-column: 1;
+    }
+    div #weather-box2 {
+        grid-column: 2;
+    }
+    div #weather-box3 {
+        display: block;
+        grid-column: 3;
     }
     /*Footer*/
 }
