--- a/Final_Project/css/medium.css
+++ b/Final_Project/css/medium.css
@@ -1,83 +1,130 @@
-@media only screen and (min-width: 32.5em) {
-    /*Default*/
-    html {
-        -webkit-text-size-adjust: 100%;
-        -ms-text-size-adjust: 100%;
+    @media only screen and (min-width: 32.5em) {
+        /*Default*/
+        html {
+            -webkit-text-size-adjust: 100%;
+            -ms-text-size-adjust: 100%;
+        }
+         :root {
+            --Primary_Color: #512A3D;
+            --Secondary_Color: #FE9A9C;
+            --Accent1: #EDE9E8;
+            --Accent2: #D9BFD0;
+        }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        /*Header*/
+        .logo {
+            background-color: var(--Primary_Color);
+            display: block;
+            position: relative;
+            text-align: center;
+        }
+        .logo img {
+            display: block;
+            padding-bottom: 1em;
+            padding-top: 1em;
+            margin-right: auto;
+            width: 20%;
+            margin-left: auto;
+        }
+        .logo h1 {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            position: absolute;
+            top: 35%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 25px;
+            text-shadow: 0 0 5px var(--Accent2);
+        }
+        nav ul li a {
+            text-decoration: none;
+            color: var(--Primary_Color);
+            font-family: 'Playfair Display SC', serif;
+            font-size: 20px;
+            display: inline;
+            padding: 0;
+        }
+        /* main */
+        main div {
+            background-color: var(--Accent2);
+            border-radius: 5px;
+            text-align: center;
+            margin: 1em;
+        }
+        .grid {
+            display: grid;
+            height: 100%;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr;
+            margin-left: -1em;
+            margin-right: 1em;
+            grid-gap: 1em;
+            margin: auto;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            background-color: transparent;
+        }
+        #temples {
+            grid-column: 3;
+            grid-row: 1;
+            margin-top: -20em;
+        }
+        .temple-grid section:not(:first-of-type) {
+            display: none;
+        }
+        .activity-grid section:not(:first-of-type) {
+            display: none;
+        }
+        #reservation {
+            grid-column: 1/3;
+            grid-row: 1/2;
+        }
+        #reservation a {
+            position: absolute;
+            top: 35%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        #activities {
+            grid-column: 3;
+            grid-row: 1;
+            margin-top: 18em;
+        }
+        #weather-grid {
+            grid-column: 1/4;
+            grid-row: 3;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
+        div #weather-box1 {
+            grid-column: 1;
+        }
+        div #weather-box2 {
+            grid-column: 2;
+        }
+        div #weather-box3 {
+            display: none;
+            grid-column: 3;
+        }
+        /*Footer*/
+        footer {
+            width: 100%;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+        footer .logo h1 {
+            color: var(--Primary_Color);
+            background-color: transparent;
+            left: 50%;
+            top: 15%;
+        }
+        footer .logo img {
+            width: 50%;
+        }
     }
-     :root {
-        --Primary_Color: #512A3D;
-        --Secondary_Color: #FE9A9C;
-        --Accent1: #EDE9E8;
-        --Accent2: #D9BFD0;
-    }
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    /*Header*/
-    .logo {
-        background-color: var(--Primary_Color);
-        display: block;
-        position: relative;
-        text-align: center;
-    }
-    .logo img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        padding-bottom: 1em;
-        padding-top: 1em;
-        margin: 40%;
-        width: 50%;
-    }
-    .logo h1 {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        position: absolute;
-        top: 35%;
-        left: 65%;
-        transform: translate(-50%, -50%);
-        font-size: 25px;
-        text-shadow: 0 0 5px var(--Accent2);
-    }
-    /* main */
-    .grid {
-        display: grid;
-        height: 100%;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-        margin-left: -1em;
-        margin-right: 1em;
-        grid-gap: 1em;
-        margin: auto;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        background-color: transparent;
-    }
-    #temples {
-        grid-column: 3;
-        grid-row: 1;
-    }
-    #reservation {
-        grid-column: 1/2;
-        grid-row: 1/2;
-    }
-    #activities {
-        grid-column: 3;
-        grid-row: 2;
-        float: right;
-    }
-    #weather-grid {
-        grid-column: 1/3;
-        grid-row: 3;
-    }
-    /*Footer*/
-    footer {
-        width: 100%;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
